--- a/install/roles/compass/tasks/RedHat.yml
+++ b/install/roles/compass/tasks/RedHat.yml
@@ -1,7 +1,7 @@
 ---
 - name: install packages
   yum: name={{ item }} state=present
-  with_items: compass_packages
+  with_items: "{{ compass_packages }}"
   tags:
     - elk
 
