Add openstack pip conf
Signed-off-by: sfoolish <sfoolish.liang@gmail.com>

--- a/install/roles/compass/tasks/RedHat.yml
+++ b/install/roles/compass/tasks/RedHat.yml
@@ -69,6 +69,7 @@
   with_items:
     - ods-server.conf
     - http_pip.conf
+    - http_pip-openstack.conf
     - images.conf
     - packages.conf
     - elk.conf
