add ignore_errors for roles merge task
Latest ansible scripts only support install one version openstack
all openstack_* dir are deleted.

Signed-off-by: sfoolish <sfoolish.liang@gmail.com>

--- a/install/roles/compass/tasks/RedHat.yml
+++ b/install/roles/compass/tasks/RedHat.yml
@@ -166,6 +166,7 @@
         cp -rf /opt/compass-adapters/ansible/$i /var/ansible/
     done
   when: "'ansible' in '{{ pkg_installer }}'"
+  ignore_errors: yes
 
 - name: copy ansible roles into ansible folder
   shell: cp -rf /opt/compass-adapters/ansible/roles /var/ansible/
