--- a/install/roles/compass/tasks/RedHat.yml
+++ b/install/roles/compass/tasks/RedHat.yml
@@ -123,7 +123,7 @@
     cd -
 
 - name: install pip
-  shell: easy_install `ls /var/www/pip/pip-*.tar.gz`
+  shell: easy_install `ls /var/www/pip/pip-*`
 
 - name: create pip config directory
   file: path=~/.pip state=directory
