--- a/install/roles/compass/handlers/main.yml
+++ b/install/roles/compass/handlers/main.yml
@@ -8,3 +8,6 @@
 
 - name: restart http service
   service: name=httpd state=restarted enabled=yes
+
+- name: restart ntp service
+  service: name=ntpd state=restarted enabled=yes
